--- a/src/app/user/user-list/user-list.component.css
+++ b/src/app/user/user-list/user-list.component.css
@@ -1,14 +1,13 @@
-    table {
+table {
     width: 100%; 
     max-width: 1000px; 
-    margin-left: 37px;
+    margin-left: 37px; /* Changed from 37+px to 37px */
     border-collapse: collapse; 
     margin-top: 20px; 
     font-family: 'Arial', sans-serif; 
     border-radius: 8px; 
     overflow: hidden; 
     padding: 15px; 
-
 }
 
 thead {
@@ -18,10 +17,9 @@ thead {
 
 th {
     padding: 15px; 
-    text-align: left; 
+    text-align: center; /* Center text */
     font-weight: bold; 
     width: 25%; 
-    /* border-bottom: 2px solid #04330c; */
 }
 
 tbody tr {
@@ -42,7 +40,7 @@ tbody tr:hover {
 td {
     padding: 10px; 
     border: 1px solid #ddd; 
-    text-align: left;
+    text-align: center; /* Center text */
 } 
 
 .button-container {
@@ -122,9 +120,9 @@ td {
 }
 
 .col-ms-8 {
-
     padding: 15px; 
 }
+
 .btn-group {
     display: flex; /* Use flexbox for layout */
 }
@@ -136,6 +134,3 @@ td {
 .btn-group .btn:not(:last-child) {
     margin-right: 10px; /* Space between buttons */
 }
-
-
-
